# assistente_ai

./: .dockerignore  .gitignore  CACHE_MANAGEMENT_README.md  CELERY_README.md  DOCKER_README.md  Dockerfile  Dockerfile.prod  Master_Indexing_Manual.md  PRODUCTION_README.md  README.md  README_NUOVA_STRUTTURA.md  advanced_bayesian_features.py  advanced_monitoring.py  architecture_documentation.md  archivista_processing.py  archivista_tasks.py  batch_operations.py  batch_test_indexing.py  cache_management_example.py  celery_app.py  check_db.py  config.py  deploy.sh  deployment_automation.py  diagnose_pdf_extraction.py  diagnosis_results.txt  docker-compose.prod.yml  docker-compose.yml  elenco_snellito_finale.txt  error_diagnosis_framework.py  evaluate.py  export_manager.py  feedback_system.py  file_utils.py  knowledge_structure.py  main.py  main_new_architecture.py  monitoring_setup.py  production_config.py  progressive_disclosure.py  (+34 more)
.github/: copilot-instructions.md
archive/: README.md  elenco_snellito_finale.txt  final_validation_report_20251022_205412.json
config/: .pre-commit-config.yaml  prompts.json
database_layer/: FASE_1_README.md  PHASE_0_COMPLETION.md  README.md  database_analysis.md  example_project_usage.py  example_usage.py  project_aware_main.py  simple_test.py  test_migration.db  test_migration.py  test_migration_fixed.py
db_memoria/: archivista_status.json  chroma.sqlite3  default__vector_store.json  docstore.json  index_store.json  metadata.sqlite  metadata.sqlite.backup.20251021_212144  metadata.sqlite.backup.20251021_212215  metadata.sqlite.backup.20251021_212251
db_memoria_backup/: archivista_status.json  default__vector_store.json  docstore.json  index_store.json  metadata.sqlite
docs/: CACHE_MANAGEMENT_README.md  Master_Indexing_Manual.md  README.md  api_documentation.md  api_reference.md  architettura_target.md  centralization_blueprint.md  go_live_checklist.md  migration_strategy.md  project_todo_list.md  quality_report_settimana_7.md
documenti_da_processare/: Bozza5.pptx
pages/: 0_Projects.py  1_Chat.py  1_💬_Chat.py  2_Archivio.py  2_🗂️_Archivio.py  3_Editor.py  3_📝_Editor.py  4_Nuovo.py  4_✨_Nuovo.py  5_Carriera.py  5_🎓_Carriera.py  6_Grafo.py  7_Workflow_Wizards.py  8_Feedback_Dashboard.py  9_Smart_Suggestions.py  login.py
redis/: README.md
scripts/: README_scripts.md
src/: __init__.py
temp/: README.md  demo_archive_tree.py  elenco_snellito.txtold  integration_demo.py  test_archive_tree.py  test_complete_integration.py  test_new_architecture.py
tests/: __init__.py  conftest.py  test_browser_compatibility.py  test_integration_services.py  test_performance_stress.py  test_security_validation.py  test_unit_core.py  test_user_acceptance.py
tools/: README_tools.md  __init__.py  bayesian_inference_engine.py  knowledge_structure.py  performance_optimizer.py  (+1 more)
(+116 files in other folders)
